fixed issue on overlapping booking

--- a/public/assets/css/showGenieStyle.css
+++ b/public/assets/css/showGenieStyle.css
@@ -3,6 +3,11 @@
     max-width: 98vw;
 }
 
+.errorsList {
+    color: #aa0000;
+    margin-bottom: 1em;
+}
+
 .costtile,
 .wishtile,
 .lamptile,
@@ -14,6 +19,10 @@
     border-radius: 10px;
 }
 
+.bookingTitle {
+    margin-bottom: 1em;
+}
+
 .tileContainer {
     background: #c8cbd388;
     height: 100px;
@@ -22,12 +31,9 @@
 .formContainer {
     border: 1px solid #a8a8a8;
     border-radius: 25px;
-    height: 350px;
+    height: fit-content;
     margin-top: 3em !important;
-}
-
-.bookingTitle {
-    margin-bottom: 2em;
+    padding: 1em;
 }
 
 .costtile,
